--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "dependencies": {
     "flux": "^3.1.3",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
+    "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
-    "react-google-maps": "^9.4.3",
+    "react-google-maps": "^9.4.5",
+    "react-router-dom": "^4.2.2",
     "react-toastify": "^3.2.1"
   }
 }
